# mfawesome

./: .gitignore  .gitlab-ci.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.cfg.bak  setup.py
.github/workflows/: publish.yml  python-publish.yml  python-test-publish.yml
mfawesome/: __init__.py  config.py  countdownbars.py  exec_mfawesome.py  logutils.py  ntptime.py  qrcodes.py  totp.py  utils.py
mfawesome/data/: ntpservers.yaml
mfawesome_tests/: pyproject.toml  test_mfawesome.py
src/mfawesome/: Scratch.ipynb  __init__.py  __main__.py  config.py  countdownbars.py  exception.py  exec_mfawesome.py  exec_mfawesome_click.py  mfa_secrets.py  mfatests.py  ntptime.py  qrcodes.py  totp.py  utils.py
tests/: test_mfawesome.py
