[tool.poetry]
name = "mfawesome"
version = "0.1.51"
description = "CLI Multi-Factor Authenticator Tool"
authors = ["Rob Milloy <rob@milloy.net>"]
readme = "README.md"
include = ["src/mfawesome/data/*", "tests/*", "images/*"]
license = "MIT"
repository = "https://github.com/rpm5099/mfawesome"
keywords = ["totp", "hotp", "2fa", "mfa", "cli"]

[tool.poetry.dependencies]
python = ">= 3.11,< 4.0"
rich = ">= 13.9.2"
PyYAML = ">= 6.0.2"
numpy = ">= 1.26.4"
cryptography = ">= 43.0.1"
opencv-python = ">= 4.10.0.84"
protobuf = ">= 5.28.2"
qrcode = { extras = ["pil"], version = ">= 8.0" }
pyzbar = { version = ">= 0.1.9", optional = true }
qreader = { version = ">= 3.14", optional = true, python = ">= 3.11,< 3.13" }

[tool.poetry.group.test.dependencies]
pytest = ">= 8.3.3"
pytest-cov = ">= 5.0.0"
coverage = ">= 7.6.3"

[tool.poetry.group.dev.dependencies]
ruff = ">= 0.6.3"

[tool.poetry.extras]
qrimport = ["qreader", "pyzbar"]
all = ["qreader", "pyzbar", "pytest", "pytest-cov", "coverage"]

[tool.poetry.scripts]
mfa = "mfawesome.exec_mfawesome:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src/mfawesome"]
command_line = "-m pytest"

[tool.coverage.report]
include = ["src/mfawesome/*.py"]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
