[tool.poetry]
name = "mfawesome"
version = "0.1.61"
description = "CLI Multi-Factor Authenticator Tool"
authors = ["Rob Milloy <rob@milloy.net>"]
readme = "README.md"
include = ["src/mfawesome/data/*", "tests/*", "images/*"]
license = "MIT"
repository = "https://github.com/rpm5099/mfawesome"
keywords = ["totp", "hotp", "2fa", "mfa", "cli"]

[tool.poetry.dependencies]
python = ">= 3.11,< 4.0"
rich = "*"
PyYAML = "*"
numpy = "*"
cryptography = ">= 42.0"
opencv-contrib-python-headless = ">= 4.5"
protobuf = "*"
qrcode = { extras = ["pil"], version = ">= 7.4" }

[tool.poetry.group.test.dependencies]
pytest = ">= 8.3.3"
pytest-cov = ">= 5.0.0"
coverage = ">= 7.6.3"

[tool.poetry.group.dev.dependencies]
ruff = ">= 0.6.3"

[tool.poetry.extras]
all = ["ruff", "pyzbar", "pytest", "pytest-cov", "coverage"]

[tool.poetry.scripts]
mfa = "mfawesome.exec_mfawesome:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["src/mfawesome"]
command_line = "-m pytest"

[tool.coverage.report]
include = ["src/mfawesome/*.py"]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
