[tool.project]
license = { text = "MIT License" }
repository = "https://github.com/rpm5099/mfawesome"
keywords = ["totp", "hotp", "2fa", "mfa", "cli"]

[tool.poetry]
name = "mfawesome"
version = "0.1.74"
description = "CLI Multi-Factor Authenticator Tool"
authors = ["Rob Milloy <rob@milloy.net>"]
readme = "README.md"
packages = [{ include = "mfawesome" }, { include = "mfawesome_tests" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Jupyter",
    "License :: Freeware",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: Desktop Environment",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Session",
    "Topic :: Office/Business",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">= 3.10,< 4.0"
rich = "*"
PyYAML = "*"
numpy = "*"
cryptography = ">= 42.0"
opencv-contrib-python-headless = ">= 4.5"
protobuf = "*"
qrcode = { extras = ["pil"], version = ">= 7.4" }

[tool.poetry.group.dev.dependencies]
dnspython = { version = "*", optional = true }
ruff = ">= 0.6.3"

[tool.poetry.group.test.dependencies]
pytest = ">= 8.3.3"
pytest-cov = ">= 5.0.0"
coverage = ">= 7.6.3"

[tool.poetry.extras]
all = ["ruff", "pytest", "pytest-cov", "coverage", "dnspython"]

[tool.poetry.scripts]
mfa = "mfawesome.exec_mfawesome:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["mfawesome"]
command_line = "-m pytest"

[tool.coverage.report]
include = ["mfawesome/*.py"]
show_missing = true

[tool.coverage.xml]
output = "coverage.xml"
