#      __  ____________                                             
#     /  |/  / ____/   |_      _____  _________  ____ ___  ___      
#    / /|_/ / /_  / /| | | /| / / _ \/ ___/ __ \/ __ `__ \/ _ \     
#   / /  / / __/ / ___ | |/ |/ /  __(__  ) /_/ / / / / / /  __/     
#  /_/  /_/_/   /_/  |_|__/|__/\___/____/\____/_/ /_/ /_/\___/  

[metadata]
name = mfawesome
maintainer = Rob Milloy
long_description = file: README.md
long_description_content_type= text/markdown
description_file = README.md

title = "mfawesome"
description = attr: mfawesome.__description__
version = attr: mfawesome.__version__
url = attr: mfawesome.__url__
build_date = attr: mfawesome.__build_date__
author = attr: mfawesome.__author__
author_email = attr: mfawesome.__author_email__

[options]
python_requires = >=3.11
include_package_data = True

package_dir =
    = src

setup_requires = 
    rich
    pyyaml
    cryptography
    numpy
    protobuf
    opencv-python
    qrcode[pil]
    argcomplete


install_requires =
    rich
    pyyaml
    cryptography
    numpy
    opencv-python
    protobuf
    qrcode[pil]
    argcomplete

[options.extras_require]

qrimport =
    qreader
    pyzbar

all = 
    mfawesome[qrimport]

[options.package_data]
* = src/mfawesome/data

[options.entry_points]
console_scripts =
    mfa = mfawesome.exec_mfawesome:main