[tool.poetry]
name = "tests"
version = "0.1.0"
description = "MFAwesome tests"
authors = ["Rob Milloy <rob@milloy.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.test.dependencies]
pytest = ">= 8.3.3"
pytest-cov = ">= 5.0.0"
coverage = ">= 7.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
